--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                         <li class="nav__item">
                             <a href="#contact" class="nav__link">Contact us</a>
                         </li>
+
+                        <i class="bx bx-toggle-left chang-theme" id="theme-button"> </i>
                     </ul>
                 </div>
 
@@ -2070,8 +2072,8 @@
         </footer>
 
         <!--=============== SCROLL UP ===============-->
-        
-
+        <a href="#" class="scrollup" id="scrollup"></a>
+            <i class="bx bx-up-arrow-alt scrollup__icon"></i>
         <!--=============== MAIN JS ===============-->
         <script src="assets/js/main.js"></script>
     </body>
