--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <a href="#contact" class="nav__link">Contact us</a>
                         </li>
 
-                        <i class="bx bx-toggle-left chang-theme" id="theme-button"> </i>
+                        <i class="bx bx-toggle-left change-theme" id="theme-button"></i>
                     </ul>
                 </div>
 
@@ -2062,18 +2062,19 @@
                 </div>
 
                 <div class="footer__social">
-                    <a href="#" target="_blank" class="footer__social-link"><i class="bx bxl-instagram-alt"></i></a>
-                    <a href="#" target="_blank" class="footer__social-link"><i class="bx bxl-github"></i></a>
-                    <a href="#" target="_blank" class="footer__social-link"><i class="bx bxl-linkedin"></i></a>
+                    <a href="https://www.instagram.com/brandon_loouis/" target="_blank" class="footer__social-link"><i class="bx bxl-instagram-alt"></i></a>
+                    <a href="https://www.linkedin.com/in/brandon-louis-4ba989105/" target="_blank" class="footer__social-link"><i class="bx bxl-github"></i></a>
+                    <a href="https://github.com/loouisbrandon" target="_blank" class="footer__social-link"><i class="bx bxl-linkedin"></i></a>
                 </div>
             </div>
 
-            <p class="footer__copy">&#169; Brandon Louis. All right reserved - using the template design from <a href="" target="_blank">Bedimcode </a></p>
+            <p class="footer__copy">&#169; Brandon Louis. All right reserved - using the template design from <a href="https://www.instagram.com/bedimcode/" target="_blank">Bedimcode </a></p>
         </footer>
 
         <!--=============== SCROLL UP ===============-->
-        <a href="#" class="scrollup" id="scrollup"></a>
+        <a href="#" class="scrollup" id="scroll-up">
             <i class="bx bx-up-arrow-alt scrollup__icon"></i>
+        </a>
         <!--=============== MAIN JS ===============-->
         <script src="assets/js/main.js"></script>
     </body>
