--- a/index.html
+++ b/index.html
@@ -2059,11 +2059,11 @@
                         <li><a href="#" class="footer__link">Custumer Help</a></li>
                     </ul>
                 </div>
-
+                
                 <div class="footer__social">
                     <a href="https://www.instagram.com/brandon_loouis/" target="_blank" class="footer__social-link"><i class="bx bxl-instagram-alt"></i></a>
-                    <a href="https://www.linkedin.com/in/brandon-louis-4ba989105/" target="_blank" class="footer__social-link"><i class="bx bxl-github"></i></a>
-                    <a href="https://github.com/loouisbrandon" target="_blank" class="footer__social-link"><i class="bx bxl-linkedin"></i></a>
+                    <a href="https://github.com/loouisbrandon" target="_blank" class="footer__social-link"><i class="bx bxl-github"></i></a>
+                    <a href="https://www.linkedin.com/in/brandon-louis-4ba989105/" target="_blank" class="footer__social-link"><i class="bx bxl-linkedin"></i></a>
                 </div>
             </div>
 
